[tool.poetry]
name = "host-tools"
version = "1.03"
description = ""
authors = ["l02 <l8556@outlook.com>"]
readme = "README.md"
repository='https://github.com/l8556/host_control'
classifiers=[
    'Operating System :: OS Independent',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python :: Implementation :: CPython',
]


[tool.poetry.dependencies]
python = ">=3.7.0,<4.0"
python-xlib = "*"
py7zr = "^0.20.6"
pywin32 = { version = "*", markers = "sys_platform == 'win32'" }
distro = "*"
requests = "*"
rich = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
