[tool.poetry]
name = "host-tools"
version = "2.05"
description = ""
authors = ["l02 <l8556@outlook.com>"]
readme = "README.md"
repository='https://github.com/l8556/host_tools'
classifiers=[
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python :: Implementation :: CPython',
]


[tool.poetry.dependencies]
python = ">=3.12"
python-xlib = "*"
py7zr = "*"
pywin32 = { version = "*", markers = "sys_platform == 'win32'" }
distro = "*"
requests = "*"
rich = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
